# CVA

./: README.md  amplify.yml
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/api/fastapibackend/: cli-inputs.json
amplify/backend/custom/ecsBackend/: ecsBackend-cloudformation-template.json  parameters.json
amplify/backend/function/fastapilambda/: Pipfile  fastapilambda-cloudformation-template.json
amplify/backend/function/fastapilambda/src/: event.json  index.py
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/app/: __init__.py  __main__.py
backend/src/app/contact/: dependencies.py  exceptions.py  models.py  repository.py  router.py  service.py
backend/src/app/core/: config.py
backend/src/app/helpers/: router_link.py
backend/src/utils/: try_except.py
backend/tests/test_app/test_contact/: test_service.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/cva-gui/: package-lock.json  package.json
frontend/cva-gui/src/app/: layout.tsx  page.tsx
frontend/cva-gui/src/app/chat/: page.tsx
frontend/cva-gui/src/hooks/: use-audio-recording.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/components/common/: contact-form.tsx  contact-info-card.tsx  nav-item.tsx  social-link.tsx
frontend/src/components/layout/: footer.tsx  navbar.tsx  theme-provider.tsx  toogle-theme.tsx
(+11 files in other folders)
