[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Pierre LAPOLLA"}
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.14",
    "mangum>=0.19.0",
    "pydantic-settings>=2.10.1",
    "structlog>=25.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
